fix contrast

--- a/lesson01/styles/media-query.css
+++ b/lesson01/styles/media-query.css
@@ -9,7 +9,7 @@ footer {
     margin: 1rem auto;
     border: solid 1px black;
     padding: 1rem;
-    background-color: #3e79fa;
+    background-color: #729cf5;
 }
 
 main {
